Completed Strata.Stream.Pipeline.