@@ -9,8 +9,8 @@ sourceSets {
     test.resources.srcDirs = ['src/test/resources']
 }
 
-group 'strata.stream'
-version '1.0-SNAPSHOT'
+group = 'strata.stream'
+version = '1.0-SNAPSHOT'
 
 dependencies {
     testImplementation project(':Components:Strata.Stream.Flink')
@@ -22,6 +22,26 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_jupiter_version"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit_jupiter_version"
+}
+
+configurations {
+    testArtifacts
+}
+
+tasks.register('testJar', Jar) {
+    archiveClassifier = 'tests'
+    from sourceSets.test.output
+    from sourceSets.test.resources
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+tasks.named("testJar").configure {
+    dependsOn testClasses
+}
+
+artifacts {
+    archives testJar
+    testArtifacts testJar
 }
 
 test {
@@ -38,5 +58,7 @@ test {
             '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
             '--add-opens=java.base/java.io=ALL-UNNAMED',
             '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
             '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED']
 }
